# Bigmasallz

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_LLM.md  CONTRIBUTING.md  DOCKER_FIX.md  FINAL_SUMMARY.md  FIXES_APPLIED.md  LICENSE  MCP_DEPLOYMENT_SUMMARY.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_QUICKSTART.md  Makefile  NEXT_STEPS.md  PROJECT_COMPLETE.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  quick_test.py  setup-dev.sh  start.sh  test_mcp_architecture.py  test_mcp_components.py  verify.sh
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: __init__.py  base_agent.py  generator.py  generator_agent.py  generator_mcp.py  orchestrator.py
backend/app/api/: deps.py  routes.py
backend/app/api/endpoints/: __init__.py  data.py  jobs.py  schema.py
backend/app/core/: __init__.py  config.py  logging.py
backend/app/mcp/: __init__.py  client.py
backend/app/models/: __init__.py  data.py  job.py  schema.py  schemas.py
backend/app/services/: job_service.py  orchestrator.py  schema_service.py
backend/app/tools/: __init__.py  deduplication.py  vector_store.py
backend/app/utils/: __init__.py  job_manager.py  llm_client.py  validators.py
backend/tests/: conftest.py  test_orchestrator.py
client/bigmasallz_client/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
client/bigmasallz_client/app/: backup_schema.txt  globals.css  page.tsx
client/bigmasallz_client/app/components/: ChatConsole.tsx  DatasetPreview.tsx  SchemaArchitect.tsx  SignalTelemetry.tsx  SynthesisTimeline.tsx  constants.ts  types.ts
docs/: API.md  DEPLOYMENT.md  MCP_ARCHITECTURE.md
examples/: README.md  data_science_workflow.py  python_client.py
frontend/: .gitignore  Dockerfile  README.md  app.py  package.json  requirements.txt
frontend/components/: visualizations.py
frontend/src/app/: page.tsx
frontend/src/components/generation/: GenerationForm.tsx  ResultsViewer.tsx
frontend/src/components/schema/: SchemaValidator.tsx  index.ts
frontend/src/services/: jobs.ts
frontend/src/types/: api.ts
frontend/utils/: api_client.py
frontend_nextjs_backup/: Dockerfile  README.md  next.config.js
frontend_nextjs_backup/src/app/: layout.tsx
frontend_nextjs_backup/src/components/: README.md
frontend_nextjs_backup/src/components/generation/: ProgressBar.tsx  index.ts
frontend_nextjs_backup/src/components/schema/: SchemaEditor.tsx  SchemaInput.tsx
frontend_nextjs_backup/src/services/: api.ts  data.ts  schema.ts
frontend_nextjs_backup/src/types/: data.ts  job.ts  schema.ts
lora/: .gitignore  README.md  README_YAP.md  SETUP_SUMMARY.md  config_examples.txt  generate_sample_data.py  inference.py  main.py  merge_lora.py  prepare_dataset.py  pyproject.toml  quick_start.sh  requirements.txt  train_lora.py
mcp-server/: .vscode-settings.json  README.md  package-lock.json  package.json
mcp-server/src/: index.ts
server/: .env.example  .gitignore  ARCHITECTURE.md  FRONTEND_GUIDE.md  IMPLEMENTATION.md  INITIALIZATION_COMPLETE.md  MCP_COPILOT_USAGE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_ENDPOINTS.md  README_FRONTEND_API.md  README_FULL.md  README_MCP_ARCHITECTURE.md  SETUP.md  main.py  pyproject.toml  quickstart.sh  start.sh  streamlit_app.py  test_api.py
server/examples/: interactive_client.py  usage_examples.py
server/src/: __init__.py  config.py
server/src/api/: __init__.py  gemini_client.py
server/src/api_server/: app.py
server/src/api_server/routers/: __init__.py  health.py  jobs.py  schema.py
server/src/core/: __init__.py  job_manager.py  models.py
server/src/mcp_server/: __init__.py  copilot_mcp.py  server.py
server/src/services/: fallback_generator.py  generation_service.py
server/src/storage/: __init__.py  handlers.py  vector_store.py
server/src/utils/: __init__.py  logger.py  validators.py
server/tests/: __init__.py  test_fallback_generator.py  test_generation_service_fallback.py  test_job_manager.py  test_models.py  test_validators.py
server/vector_store/: chroma.sqlite3
tests/: test_backend.py
