[project]
name = "final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles==23.2.1",
    "alembic==1.13.1",
    "asyncio==3.4.3",
    "black==24.1.1",
    "chromadb==0.4.22",
    "fastapi==0.109.0",
    "google-generativeai==0.3.2",
    "httpx==0.26.0",
    "mypy==1.8.0",
    "numpy<2.0.0",
    "openai==1.10.0",
    "passlib[bcrypt]==1.7.4",
    "pre-commit==3.6.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "redis==5.0.1",
    "ruff==0.1.14",
    "sentence-transformers==2.3.1",
    "sentry-sdk[fastapi]==1.40.0",
    "sqlalchemy==2.0.25",
    "structlog==24.1.0",
    "uvicorn[standard]==0.27.0",
]
